Introduce ObjectProcessor
Enables `ObjectMerger` and `OverlapFixer` to implement the same interface, and means they can easily be applied sequentially.